# karte

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/repository_metadata/: gh_repo.yml  label_master.yml
.github/workflows/: package-audit.yml  post-pull-request.yml
docs/: ARCHITECTURE.md  how-to-use-jp.md  how-to-use.md
src/karte/: __init__.py  cli.py  schema.py  storage.py
src/karte/lib/: __init__.py  helper_func.py
tests/: conftest.py  test_cli.py  test_schema.py  test_storage.py
