[project]
name = "karte"
version = "0.1.0"
description = "Per-repository personal TODO/ticket manager with JSON storage and DuckDB SQL queries"
readme = "README.md"
authors = [
    { name = "RyoNak", email = "nakagamiryo0901@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.3",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
karte = "karte.cli:app"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "types-pyyaml>=6.0.12.20260518",
]
